--- a/JAVD_Resume.html
+++ b/JAVD_Resume.html
@@ -82,6 +82,20 @@
 			<!-- certification and courses -->
 		</table>
 	</div>
+	</br>
+	
+	<div id="secTitAch" class="SectionTitleStyle">Achievements</div>
+	<div class="SectionBodyStyle">
+		<ul id="tsCollection">
+			<li>Certified in the Framework Niagara AX by TRIDIUM in 2009 on Richmond, VA.</li>	 
+			<!--li>System analyst</li>
+			<li>Web Programmer (Java & Oracle)</li>
+			<li>Analysis and creation of databases (schemas, sp, triggers, others)</li>
+			<li>Data validation, migration and backup (scripts)</li>
+			<li>Installation and configuration of servers (web, mail, ftp, others)</li>
+			<li>Testing</li-->
+		</ul>
+	</div>		
 	</br></br>
 </body>
 <footer id="createdBy">Created by Jes&uacute;s Valdez</footer>
