--- a/JAVD_Resume.html
+++ b/JAVD_Resume.html
@@ -86,17 +86,235 @@
 	
 	<div id="secTitAch" class="SectionTitleStyle">Achievements</div>
 	<div class="SectionBodyStyle">
-		<ul id="tsCollection">
-			<li>Certified in the Framework Niagara AX by TRIDIUM in 2009 on Richmond, VA.</li>	 
-			<!--li>System analyst</li>
-			<li>Web Programmer (Java & Oracle)</li>
-			<li>Analysis and creation of databases (schemas, sp, triggers, others)</li>
-			<li>Data validation, migration and backup (scripts)</li>
-			<li>Installation and configuration of servers (web, mail, ftp, others)</li>
-			<li>Testing</li-->
+		<ul id="acCollection">
+			<li>Analysis, development and maintenance of Java Web systems</li>
+			<li>Certified in Niagara AX Framework by TRIDIUM. Richmond, VA.</li>	 
+			<li>Tener interacción con usuarios Americanos</li>
 		</ul>
 	</div>		
-	</br></br>
+	</br>
+	
+	<div id="secTitAch" class="SectionTitleStyle">Achievements II</div>
+	<div class="SectionBodyStyle">
+		<div id="a21Collection">
+			<p>
+			Compañia:		GS
+			Proyecto:		MC
+			Usuario:		AA
+			
+			Descripción: 	Es un sistema configurador de parametros. 
+			
+			Objetivo:		
+			El objetivo del MC fue administrar los parametros que utilizaba el sistema NG.
+			Los parametros estaban sujetos a reglas legales y de negocios con interdependencias, para esto se  realizó un complejo algoritmo de validaciones.
+			
+			Actividades:	
+						- administrar y planear las actividades del proyecto 
+						- interactuar con los usuarios americanos para dar seguimiento a requerimientos y defectos
+						- análisis, desarrollo, mantenimiento y pruebas de los diferentes módulos incluida la parte de base de datos (back-end).
+						- análisis, desarrollo, mantenimiento y pruebas de servicios Restful.
+						- configurar los servidores de pruebas locales
+			
+			Tecnologías utilizadas: 			
+						- Eclipse
+						- Java
+						- Strut, Spring
+						- Maven
+						- HTML, JSP
+						- Javascript, JQuery
+						- CSS
+						- Oracle
+						- Toad
+						- JBoss, Jetty
+						- JUnit
+						- Metodologías TDD y Scrum		
+		</div>
+		
+		<div id="a22Collection">
+			<p>Proyectos Varios</p>
+			<p>
+			Compañia:		GS
+			Proyecto:		Varios
+			Usuario:		LAM
+			
+			Descripción: 	Apoyo a diferentes proyectos. 
+			
+			Objetivo:		
+			Esta área fue un tipo de consultoria interna de EK-LAM, consistia en brindar apoyo al área de sistemas de Latinoamerica en sus diferentes proyectos. 
+			
+			Actividades:	
+						- análisis, desarrollo, mantenimiento y pruebas de diferentes módulos.
+						- identificación y corrección de errores
+						- comunicación con los usuarios
+			
+			Tecnologías utilizadas: 			
+						- Eclipse, Netbeans, JDeveloper
+						- Java
+						- Strut, Spring, Hibernate
+						- HTML, JSP
+						- Javascript, JQuery
+						- CSS
+						- SQL, Oracle, Toad
+						- JBoss y Glassfish
+						- JUnit
+						- Metodologías TDD y Scrum				
+			</p>
+		</div>		
+		
+		<div id="a23Collection">
+			<p>
+			Compañia:		Sftk
+			Proyecto:		Mars - DXL
+			Usuario:		GE - Corporate
+			
+			Descripción: 	Es un sistema validador de formatos de documentos contables. 
+			
+			Objetivo:		
+			El objetivo del sistema era validar que cada documento cumpliera con un formato predefinido, posteriormente si el formato era correcto el documento era enviado al sistema que encargado de procesarlo.
+			
+			Actividades:	
+						- análisis, desarrollo, mantenimiento y pruebas de los diferentes módulos incluida la parte de base de datos.
+			
+			Tecnologías utilizadas: 			
+						- Eclipse
+						- Java
+						- HTML, JSP, 						
+						- Javascript
+						- CSS
+						- SQL, Oracle, PL/SQL
+						- JBoss
+			</p>
+		</div>
+		
+		<div id="a24Collection">
+			<p>
+			Compañia:		Sftk
+			Proyecto:		RealEstate
+			Usuario:		GE - Corporate
+			
+			Descripción: 	Migración de BD con información de GE-Realstate. 
+			
+			Objetivo:		
+			El objetivo del proyecto fue validar y migrar información de una bd obsoleta hacia una base de datos de Oracle. Uno de los principales retos era mantener la integridad debido a que los catálogos se actualizaban dos o tres veces por semana. El otro gran reto fue entregar el proyecto en un lapso de 4 meses aproximadamente ya que al momento de tomarlo llevaba un retraso de 2 años.
+			
+			Actividades:	
+						- responsable del proyecto
+						- comunicación diaria con el usuario del proyecto (en inglés)
+						- ingenieria inversa
+						- generación de scripts para validación y migración (SQL Loader)
+						- análisis y rediseño del flujo para reducción de tiempos
+						- pruebas
+			
+			Tecnologías utilizadas: 			
+						- Toad
+						- Oracle
+						- SQL
+			</p>
+		</div>	
+
+		<div id="a25Collection">
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Compañia:</div>
+				<div class="NodeDiv2">GS</div>
+			</div>
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Proyecto:</div>
+				<div class="NodeDiv2">MC</div>
+			</div>			
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Usuario:</div>
+				<div class="NodeDiv2">AA</div>
+			</div>
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Descripción:</div>
+				<div class="NodeDiv2">Es un sistema configurador de parametros.</div>
+			</div>
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Objetivo:</div>
+				<div class="NodeDiv2">
+					El objetivo del MC fue administrar los parametros que utilizaba el sistema NG.
+					Los parametros estaban sujetos a reglas legales y de negocios con interdependencias, para esto se  realizó un complejo algoritmo de validaciones.
+				</div>
+			</div>
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Actividades:</div>
+				<div class="NodeDiv2">
+					- administrar y planear las actividades del proyecto 
+					- interactuar con los usuarios americanos para dar seguimiento a requerimientos y defectos
+					- análisis, desarrollo, mantenimiento y pruebas de los diferentes módulos incluida la parte de base de datos (back-end).
+					- análisis, desarrollo, mantenimiento y pruebas de servicios Restful.
+					- configurar los servidores de pruebas locales
+				</div>
+			</div>
+			<div id="teXCollection" class="RootDiv2">
+				<div class="NodeDiv2">Tecnologías utilizadas:</div>
+				<div class="NodeDiv2">
+						- Eclipse
+						- Java
+						- Strut, Spring
+						- Maven
+						- HTML, JSP
+						- Javascript, JQuery
+						- CSS
+						- Oracle
+						- Toad
+						- JBoss, Jetty
+						- JUnit
+						- Metodologías TDD y Scrum		
+				</div>
+			</div>
+
+		</div>	
+
+		<table id="a26Collection">
+			<tr>
+				<th>Compañia</th>
+				<td>GS</td>
+			</tr>
+			<tr>
+				<th>Proyecto</th>
+				<td>MC</td>
+			</tr>
+			<tr>
+				<th>Usuario</th>
+				<td>AA</td>
+			</tr>			
+			<tr>
+				<th>Descripción</th>
+				<td>Es un sistema configurador de parametros.</td>
+			</tr>			
+			<tr>
+				<th>Objetivo</th>
+				<td>El objetivo del MC fue administrar los parametros que utilizaba el sistema NG.
+					Los parametros estaban sujetos a reglas legales y de negocios con interdependencias, para esto se  realizó un complejo algoritmo de validaciones.</td>
+			</tr>			
+			<tr>
+				<th>Actividades</th>
+				<td>- administrar y planear las actividades del proyecto 
+					- interactuar con los usuarios americanos para dar seguimiento a requerimientos y defectos
+					- análisis, desarrollo, mantenimiento y pruebas de los diferentes módulos incluida la parte de base de datos (back-end).
+					- análisis, desarrollo, mantenimiento y pruebas de servicios Restful.
+					- configurar los servidores de pruebas locales</td>
+			</tr>			
+			<tr>
+				<th>Tecnologías utilizadas</th>
+				<td>- Eclipse
+						- Java
+						- Strut, Spring
+						- Maven
+						- HTML, JSP
+						- Javascript, JQuery
+						- CSS
+						- Oracle
+						- Toad
+						- JBoss, Jetty
+						- JUnit
+						- Metodologías TDD y Scrum	</td>
+			</tr>			
+		</table>			
+	</div>	
+	</br></br>	
+
 </body>
 <footer id="createdBy">Created by Jes&uacute;s Valdez</footer>
 </html>
