--- a/JAVD_Resume.html
+++ b/JAVD_Resume.html
@@ -62,12 +62,12 @@
 		</br>
 	
 		<div id="secTitCC" class="SectionTitleStyle">Certification / Courses</div>
-		<div>
+		<!--div-->
 			</br>
 			<table id="ccCollection" class="TableStyle">
 				<!-- certification and courses -->
 			</table>
-		</div>
+		<!--/div-->
 		</br>
 
 		<!-- ONLY FOR PDF - ->
